# yt-short-king

./: .dvcignore  .gitignore  README.md  changelog.md  main.py  pyproject.toml
.cursor/rules/: 00-core-rules.mdc  10-python-architecture-patterns.mdc  11-python-error-handling-policy.mdc  12-python-config-paths.mdc  13-python-readability-and-quality.mdc
data/: external.dvc  raw.dvc
dvc_plots/: index.html
modal/: guide.md  image_generator.py  vertex_example.py
n8n/: run-checklist.md  speech-generation.json  stealing-bones.json  video-generation.json
src/ytsk/: config.py  main.py  utils.py
src/ytsk/cli/: cli_audios.py  cli_videos.py
src/ytsk/database/: __init__.py  database_crud.py  database_shorts.py
src/ytsk/editing/: __init__.py  audio_speech_to_text.py  video_cuts_detect.py  video_download.py  video_get_audio.py
src/ytsk/videos/: video_cuts_detect.py
